Request body, Post, auto-serialization issues
Signed-off-by: kamarbaraka <kamar254baraka@gmail.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/
+spring.datasource.url=jdbc:mysql://localhost:3306/develhpe_spring_boot
 spring.datasource.username=root
 spring.datasource.password=Samsroot#mysql
 spring.jpa.hibernate.ddl-auto=update
